# CLearn

./: .gitignore  CMakeLists.txt  README.md  main  main.c  next_step  run_main.sh
DSA/LinkedLists/: basics.c  circular.c  doubly.c  poly.c  queue.c  queue_impl.c  stack_impl.c  stacks.c
DSA/Sorting/: sorts.c
DSA/Trees/: basics.c
DSA/Trees And Graphs/: binary_tree.c  graphs.c
NM/: bisection_method.c  gauss_eli.c  gauss_jordarn.c  newton fb.c  newton.c  regular_falsie.c
NM/revision/: CMakeLists.txt  mod1.c  mod2.c  mod3.c  mod3_equal_interval.c  mod4.c  mod5.c
old/: main.c  next_step.c  version.c
